# vue3-simple-icons

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.js  components.json  package-lock.json  package.json  simple-icons.json  tsconfig.json  vite.config.js
.github/workflows/: example-site.yml
build-tools-rs/: Cargo.toml  template.vue.d.ts
build-tools-rs/src/: component_builder.rs  downloader.rs  main.rs  renamer.rs  types.rs
buildTools/: .gitignore  README.md  package-lock.json  package.json  template.vue
buildTools/src/: component_builder.ts  main.ts  types.ts
example/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
example/src/: App.vue  main.js  main.ts
example/src/components/: IconElement.vue  SiteHeader.vue
