[package]
name = "vue3-simple-icons-builder"
description = "Build Vue 3 components from simple-icons"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.45", features = ["full"] }
zip = "4.0.0"
indicatif = "0.17.11"
tempfile = "3.11.0"
anyhow = "1"
regex = "1.11.1"
heck = "0.5.0"
num2words = "1.2.0"
edit-xml = { git = "https://github.com/wyatt-herkamp/edit-xml.git" }
chumsky = "0.10.1"
unicode-normalization = "0.1.24"
chrono = { version = "0.4.41", features = ["serde"] }
